# MCP-Weather

./: .env.example  .gitignore  DEMO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  README.md  chat_service.py  demo.md  deploy.ps1  deploy.sh  docker-compose.yml  main.py  models.py  puch.py  pyproject.toml  requirememts.txt  run-server.bat  search_service.py  whatsapp_adapter.py
.kiro/settings/: mcp.json
.kiro/specs/mcp-chatbot-server/: design.md  requirements.md  tasks.md
